Bug 1320829 - Handle OSE 3.0 installs

--- a/roles/openshift_docker_facts/tasks/main.yml
+++ b/roles/openshift_docker_facts/tasks/main.yml
@@ -59,7 +59,7 @@
 - name: Set docker version to be installed
   set_fact:
     docker_version: "{{ '1.8.2' }}"
-  when: " ( l_common_version | version_compare('3.2','<') and openshift.common.service_type == 'atomic-openshift' ) or
+  when: " ( l_common_version | version_compare('3.2','<') and openshift.common.service_type in ['openshift', 'atomic-openshift'] ) or
           ( l_common_version | version_compare('1.1.4','<') and openshift.common.service_type == 'origin' )"
 
 - name: Set docker version to be installed
