--- a/playbooks/aws/openshift-cluster/tasks/launch_instances.yml
+++ b/playbooks/aws/openshift-cluster/tasks/launch_instances.yml
@@ -8,80 +8,50 @@
     sub_host_type: "{{ g_sub_host_type }}"
 
 - set_fact:
-    ec2_region: "{{ lookup('env', 'ec2_region')
-                    | default(deployment_vars[deployment_type].region, true) }}"
-  when: ec2_region is not defined
-- set_fact:
-    ec2_image_name: "{{ lookup('env', 'ec2_image_name')
-                        | default(deployment_vars[deployment_type].image_name, true) }}"
-  when: ec2_image_name is not defined and ec2_image is not defined
-- set_fact:
-    ec2_image: "{{ lookup('env', 'ec2_image')
-                   | default(deployment_vars[deployment_type].image, true) }}"
-  when: ec2_image is not defined and not ec2_image_name
-- set_fact:
-    ec2_keypair: "{{ lookup('env', 'ec2_keypair')
-                    | default(deployment_vars[deployment_type].keypair, true) }}"
-  when: ec2_keypair is not defined
-- set_fact:
-    ec2_vpc_subnet: "{{ lookup('env', 'ec2_vpc_subnet')
-                    | default(deployment_vars[deployment_type].vpc_subnet, true) }}"
-  when: ec2_vpc_subnet is not defined
-- set_fact:
-    ec2_assign_public_ip: "{{ lookup('env', 'ec2_assign_public_ip')
-                    | default(deployment_vars[deployment_type].assign_public_ip, true) }}"
-  when: ec2_assign_public_ip is not defined
-
-- set_fact:
-    ec2_instance_type: "{{ ec2_master_instance_type | default(lookup('env', 'ec2_master_instance_type') | default(lookup('env', 'ec2_instance_type') | default(deployment_vars[deployment_type].type, true), true), true) }}"
-    ec2_security_groups: "{{ ec2_master_security_groups | default(lookup('env', 'ec2_master_security_groups') | default(lookup('env', 'ec2_security_groups') | default(deployment_vars[deployment_type].security_groups, true), true), true) }}"
+    ec2_instance_type: "{{ lookup('env', 'ec2_master_instance_type') | default(deployment_vars[deployment_type].type, true) }}"
+    ec2_security_groups: "{{ lookup('env', 'ec2_master_security_groups') | default(deployment_vars[deployment_type].security_groups, true) }}"
   when: host_type == "master" and sub_host_type == "default"
 
 - set_fact:
-    ec2_instance_type: "{{ ec2_etcd_instance_type | default(lookup('env', 'ec2_etcd_instance_type') | default(lookup('env', 'ec2_instance_type') | default(deployment_vars[deployment_type].type, true), true), true) }}"
-    ec2_security_groups: "{{ ec2_etcd_security_groups | default(lookup('env', 'ec2_etcd_security_groups') | default(lookup('env', 'ec2_security_groups') | default(deployment_vars[deployment_type].security_groups, true), true), true) }}"
+    ec2_instance_type: "{{ lookup('env', 'ec2_etcd_instance_type') | default(deployment_vars[deployment_type].type, true) }}"
+    ec2_security_groups: "{{ lookup('env', 'ec2_etcd_security_groups') | default(deployment_vars[deployment_type].security_groups, true) }}"
   when: host_type == "etcd" and sub_host_type == "default"
 
 - set_fact:
-    ec2_instance_type: "{{ ec2_infra_instance_type | default(lookup('env', 'ec2_infra_instance_type') | default(lookup('env', 'ec2_instance_type') | default(deployment_vars[deployment_type].type, true), true), true) }}"
-    ec2_security_groups: "{{ ec2_infra_security_groups | default(lookup('env', 'ec2_infra_security_groups') | default(lookup('env', 'ec2_security_groups') | default(deployment_vars[deployment_type].security_groups, true), true), true) }}"
+    ec2_instance_type: "{{ lookup('env', 'ec2_infra_instance_type') | default(deployment_vars[deployment_type].type, true) }}"
+    ec2_security_groups: "{{ lookup('env', 'ec2_infra_security_groups') | default(deployment_vars[deployment_type].security_groups, true) }}"
   when: host_type == "node" and sub_host_type == "infra"
 
 - set_fact:
-    ec2_instance_type: "{{ ec2_node_instance_type | default(lookup('env', 'ec2_node_instance_type') | default(lookup('env', 'ec2_instance_type') | default(deployment_vars[deployment_type].type, true), true), true) }}"
-    ec2_security_groups: "{{ ec2_node_security_groups | default(lookup('env', 'ec2_node_security_groups') | default(lookup('env', 'ec2_security_groups') | default(deployment_vars[deployment_type].security_groups, true), true), true) }}"
+    ec2_instance_type: "{{ lookup('env', 'ec2_node_instance_type') | default(deployment_vars[deployment_type].type, true) }}"
+    ec2_security_groups: "{{ lookup('env', 'ec2_node_security_groups') | default(deployment_vars[deployment_type].security_groups, true) }}"
   when: host_type == "node" and sub_host_type == "compute"
 
 - set_fact:
-    ec2_instance_type: "{{ lookup('env', 'ec2_instance_type')
-                          | default(deployment_vars[deployment_type].type, true) }}"
+    ec2_instance_type: "{{ deployment_vars[deployment_type].type }}"
   when: ec2_instance_type is not defined
 - set_fact:
-    ec2_security_groups: "{{ lookup('env', 'ec2_security_groups') | default(deployment_vars[deployment_type].security_groups, true) }}"
+    ec2_security_groups: "{{ deployment_vars[deployment_type].security_groups }}"
   when: ec2_security_groups is not defined
 
 - name: Find amis for deployment_type
   ec2_ami_find:
-    region: "{{ ec2_region }}"
-    ami_id: "{{ ec2_image | default(omit, true) }}"
-    name: "{{ ec2_image_name | default(omit, true) }}"
+    region: "{{ deployment_vars[deployment_type].region }}"
+    ami_id: "{{ deployment_vars[deployment_type].image }}"
+    name: "{{ deployment_vars[deployment_type].image_name }}"
   register: ami_result
 
 - fail: msg="Could not find requested ami"
   when: not ami_result.results
 
 - set_fact:
-    latest_ami: "{{ ami_result.results | oo_ami_selector(ec2_image_name) }}"
+    latest_ami: "{{ ami_result.results | oo_ami_selector(deployment_vars[deployment_type].image_name) }}"
     volume_defs:
       etcd:
         root:
           volume_size: "{{ lookup('env', 'os_etcd_root_vol_size') | default(25, true) }}"
           device_type: "{{ lookup('env', 'os_etcd_root_vol_type') | default('gp2', true) }}"
           iops: "{{ lookup('env', 'os_etcd_root_vol_iops') | default(500, true) }}"
-        etcd:
-          volume_size: "{{ lookup('env', 'os_etcd_vol_size') | default(32, true) }}"
-          device_type: "{{ lookup('env', 'os_etcd_vol_type') | default('gp2', true) }}"
-          iops: "{{ lookup('env', 'os_etcd_vol_iops') | default(500, true) }}"
       master:
         root:
           volume_size: "{{ lookup('env', 'os_master_root_vol_size') | default(25, true) }}"
@@ -107,14 +77,14 @@
 - name: Launch instance(s)
   ec2:
     state: present
-    region: "{{ ec2_region }}"
-    keypair: "{{ ec2_keypair }}"
-    group: "{{ ec2_security_groups }}"
+    region: "{{ deployment_vars[deployment_type].region }}"
+    keypair: "{{ deployment_vars[deployment_type].keypair }}"
+    group: "{{ deployment_vars[deployment_type].security_groups }}"
     instance_type: "{{ ec2_instance_type }}"
-    image: "{{ latest_ami }}"
+    image: "{{ deployment_vars[deployment_type].image }}"
     count: "{{ instances | length }}"
-    vpc_subnet_id: "{{ ec2_vpc_subnet | default(omit, true) }}"
-    assign_public_ip: "{{ ec2_assign_public_ip | default(omit, true) }}"
+    vpc_subnet_id: "{{ deployment_vars[deployment_type].vpc_subnet }}"
+    assign_public_ip: "{{ deployment_vars[deployment_type].assign_public_ip }}"
     user_data: "{{ lookup('template', '../templates/user_data.j2') }}"
     wait: yes
     instance_tags:
@@ -127,7 +97,7 @@
   register: ec2
 
 - name: Add Name tag to instances
-  ec2_tag: resource={{ item.1.id }} region={{ ec2_region }} state=present
+  ec2_tag: resource={{ item.1.id }} region={{ deployment_vars[deployment_type].region }} state=present
   with_together:
   - instances
   - ec2.instances
@@ -136,29 +106,32 @@
       Name: "{{ item.0 }}"
 
 - set_fact:
-    instance_groups: "tag_created-by_{{ created_by }}, tag_clusterid_{{ cluster }}, tag_environment_{{ cluster_env }},
-                    tag_host-type_{{ host_type }}, tag_sub-host-type_{{ sub_host_type }}"
+    instance_groups: >
+      tag_created-by_{{ created_by }}, tag_clusterid_{{ cluster }},
+      tag_environment_{{ cluster_env }}, tag_host-type_{{ host_type }},
+      tag_sub-host-type_{{ sub_host_type }}
 
 - set_fact:
     node_label:
-      region: "{{ec2_region}}"
+      region: "{{ deployment_vars[deployment_type].region }}"
       type: "{{sub_host_type}}"
   when: host_type == "node"
 
 - set_fact:
     node_label:
-      region: "{{ec2_region}}"
+      region: "{{ deployment_vars[deployment_type].region }}"
       type: "{{host_type}}"
   when: host_type != "node"
 
 - set_fact:
     logrotate:
         - name: syslog
-          path: "/var/log/cron
-                 \n/var/log/maillog
-                 \n/var/log/messages
-                 \n/var/log/secure
-                 \n/var/log/spooler \n"
+          path: |
+            /var/log/cron
+            /var/log/maillog
+            /var/log/messages
+            /var/log/secure
+            /var/log/spooler"
           options:
             - daily
             - rotate 7
