--- a/playbooks/aws/openshift-cluster/vars.yml
+++ b/playbooks/aws/openshift-cluster/vars.yml
@@ -3,42 +3,31 @@ debug_level: 2
 
 deployment_rhel7_ent_base:
   # rhel-7.1, requires cloud access subscription
-  image: ami-10663b78
-  image_name:
-  region: us-east-1
+  image: "{{ lookup('oo_option', 'ec2_image') | default('ami-10251c7a', True) }}"
+  image_name: "{{ lookup('oo_option', 'ec2_image_name') | default(None, True) }}"
+  region: "{{ lookup('oo_option', 'ec2_region') | default('us-east-1', True) }}"
   ssh_user: ec2-user
   become: yes
-  keypair: libra
-  type: m4.large
-  security_groups: [ 'public' ]
-  vpc_subnet:
-  assign_public_ip:
+  keypair: "{{ lookup('oo_option', 'ec2_keypair') | default('libra', True) }}"
+  type: "{{ lookup('oo_option', 'ec2_instance_type') | default('m4.large', True) }}"
+  security_groups: "{{ lookup('oo_option', 'ec2_security_groups') | default([ 'public' ], True) }}"
+  vpc_subnet: "{{ lookup('oo_option', 'ec2_vpc_subnet') | default(omit, True) }}"
+  assign_public_ip: "{{ lookup('oo_option', 'ec2_assign_public_ip') | default(omit, True) }}"
 
 deployment_vars:
   origin:
     # centos-7, requires marketplace
-    image: ami-61bbf104
-    image_name:
-    region: us-east-1
+    image: "{{ lookup('oo_option', 'ec2_image') | default('ami-61bbf104', True) }}"
+    image_name: "{{ lookup('oo_option', 'ec2_image_name') | default(None, True) }}"
+    region: "{{ lookup('oo_option', 'ec2_region') | default('us-east-1', True) }}"
     ssh_user: centos
     become: yes
-    keypair: libra
-    type: m4.large
-    security_groups: [ 'public' ]
-    vpc_subnet:
-    assign_public_ip:
-  online:
-    # private ami
-    image: ami-7a9e9812
-    image_name: openshift-rhel7_*
-    region: us-east-1
-    ssh_user: root
-    become: no
-    keypair: libra
-    type: m4.large
-    security_groups: [ 'public' ]
-    vpc_subnet:
-    assign_public_ip:
+    keypair: "{{ lookup('oo_option', 'ec2_keypair') | default('libra', True) }}"
+    type: "{{ lookup('oo_option', 'ec2_instance_type') | default('m4.large', True) }}"
+    security_groups: "{{ lookup('oo_option', 'ec2_security_groups') | default([ 'public' ], True) }}"
+    vpc_subnet: "{{ lookup('oo_option', 'ec2_vpc_subnet') | default(omit, True) }}"
+    assign_public_ip: "{{ lookup('oo_option', 'ec2_assign_public_ip') | default(omit, True) }}"
+
   enterprise: "{{ deployment_rhel7_ent_base }}"
   openshift-enterprise: "{{ deployment_rhel7_ent_base }}"
   atomic-enterprise: "{{ deployment_rhel7_ent_base }}"
