Remove generated config files for online deployment_type.

--- a/roles/openshift_master_facts/tasks/main.yml
+++ b/roles/openshift_master_facts/tasks/main.yml
@@ -8,7 +8,7 @@
   file:
     path: "/etc/origin/{{ item }}"
     state: absent
-  when: rpmgenerated_config.stat.exists == true and deployment_type in ['openshift-enterprise', 'atomic-enterprise']
+  when: rpmgenerated_config.stat.exists == true and deployment_type in ['openshift-enterprise', 'atomic-enterprise', 'online']
   with_items:
   - master
   - node
