--- a/roles/etcd_certificates/tasks/client.yml
+++ b/roles/etcd_certificates/tasks/client.yml
@@ -12,13 +12,13 @@
     -config {{ etcd_openssl_conf }}
     -out {{ item.etcd_cert_prefix }}client.csr
     -reqexts {{ etcd_req_ext }} -batch -nodes
-    -subj /CN={{ item.openshift.common.hostname }}
+    -subj /CN={{ item.etcd_hostname }}
   args:
     chdir: "{{ etcd_generated_certs_dir }}/{{ item.etcd_cert_subdir }}"
     creates: "{{ etcd_generated_certs_dir ~ '/' ~  item.etcd_cert_subdir ~ '/'
                  ~ item.etcd_cert_prefix ~ 'client.csr' }}"
   environment:
-    SAN: "IP:{{ item.openshift.common.ip }}"
+    SAN: "IP:{{ item.etcd_ip }}"
   with_items: etcd_needing_client_certs
 
 - name: Sign and create the client crt
@@ -32,7 +32,7 @@
     creates: "{{ etcd_generated_certs_dir ~ '/' ~  item.etcd_cert_subdir ~ '/'
                  ~ item.etcd_cert_prefix ~ 'client.crt' }}"
   environment:
-    SAN: "IP:{{ item.openshift.common.ip }}"
+    SAN: "IP:{{ item.etcd_ip }}"
   with_items: etcd_needing_client_certs
 
 - file:
