--- a/roles/etcd_certificates/tasks/server.yml
+++ b/roles/etcd_certificates/tasks/server.yml
@@ -12,13 +12,13 @@
     -config {{ etcd_openssl_conf }}
     -out {{ item.etcd_cert_prefix }}server.csr
     -reqexts {{ etcd_req_ext }} -batch -nodes
-    -subj /CN={{ item.openshift.common.hostname }}
+    -subj /CN={{ item.etcd_hostname }}
   args:
     chdir: "{{ etcd_generated_certs_dir }}/{{ item.etcd_cert_subdir }}"
     creates: "{{ etcd_generated_certs_dir ~ '/' ~  item.etcd_cert_subdir ~ '/'
                  ~ item.etcd_cert_prefix ~ 'server.csr' }}"
   environment:
-    SAN: "IP:{{ etcd_host_int_map[item.inventory_hostname].interface.ipv4.address }}"
+    SAN: "IP:{{ item.etcd_ip }}"
   with_items: etcd_needing_server_certs
 
 - name: Sign and create the server crt
@@ -32,7 +32,7 @@
     creates: "{{ etcd_generated_certs_dir ~ '/' ~  item.etcd_cert_subdir ~ '/'
                  ~ item.etcd_cert_prefix ~ 'server.crt' }}"
   environment:
-    SAN: "IP:{{ etcd_host_int_map[item.inventory_hostname].interface.ipv4.address }}"
+    SAN: "IP:{{ item.etcd_ip }}"
   with_items: etcd_needing_server_certs
 
 - name: Create the peer csr
@@ -41,13 +41,13 @@
     -config {{ etcd_openssl_conf }}
     -out {{ item.etcd_cert_prefix }}peer.csr
     -reqexts {{ etcd_req_ext }} -batch -nodes
-    -subj /CN={{ item.openshift.common.hostname }}
+    -subj /CN={{ item.etcd_hostname }}
   args:
     chdir: "{{ etcd_generated_certs_dir }}/{{ item.etcd_cert_subdir }}"
     creates: "{{ etcd_generated_certs_dir ~ '/' ~  item.etcd_cert_subdir ~ '/'
                  ~ item.etcd_cert_prefix ~ 'peer.csr' }}"
   environment:
-    SAN: "IP:{{ etcd_host_int_map[item.inventory_hostname].interface.ipv4.address }}"
+    SAN: "IP:{{ item.etcd_ip }}"
   with_items: etcd_needing_server_certs
 
 - name: Sign and create the peer crt
@@ -61,7 +61,7 @@
     creates: "{{ etcd_generated_certs_dir ~ '/' ~  item.etcd_cert_subdir ~ '/'
                  ~ item.etcd_cert_prefix ~ 'peer.crt' }}"
   environment:
-    SAN: "IP:{{ etcd_host_int_map[item.inventory_hostname].interface.ipv4.address }}"
+    SAN: "IP:{{ item.etcd_ip }}"
   with_items: etcd_needing_server_certs
 
 - file:
