--- a/playbooks/common/openshift-master/config.yml
+++ b/playbooks/common/openshift-master/config.yml
@@ -42,6 +42,12 @@
   - set_fact:
       openshift_hosted_metrics_deploy: "{{ lookup('oo_option', 'openshift_hosted_metrics_deploy') | default(false, true) }}"
     when: openshift_hosted_metrics_deploy is not defined
+  - set_fact:
+      openshift_hosted_metrics_duration: "{{ lookup('oo_option', 'openshift_hosted_metrics_duration') | default(7) }}"
+    when: openshift_hosted_metrics_duration is not defined
+  - set_fact:
+      openshift_hosted_metrics_resolution: "{{ lookup('oo_option', 'openshift_hosted_metrics_resolution') | default(10) }}"
+    when: openshift_hosted_metrics_resolution is not defined
     
   roles:
   - openshift_facts
