When creating secrets in a multi-master setup, only perform action on one master
Running secret creation on multiple masters simultaneously causes those actions after the first secret is created to fail since it already exists

--- a/playbooks/adhoc/s3_registry/s3_registry.yml
+++ b/playbooks/adhoc/s3_registry/s3_registry.yml
@@ -57,6 +57,7 @@
 
   - name: Add secrets to registry service account
     command: oc secrets add serviceaccount/registry secrets/dockerregistry
+    run_once: true
     when: "'dockerregistry' not in serviceaccount.stdout"
 
   - name: Determine if deployment config contains secrets
