Don't pull cli image when we're not containerized

--- a/playbooks/common/openshift-cluster/upgrades/v3_1_to_v3_2/upgrade.yml
+++ b/playbooks/common/openshift-cluster/upgrades/v3_1_to_v3_2/upgrade.yml
@@ -33,6 +33,7 @@
       docker pull {{ item }}:latest
     with_items:
     - "{{ openshift.common.cli_image }}"
+    when: openshift.common.is_containerized | bool
 
 ###############################################################################
 # Upgrade Masters
