--- a/roles/openshift_facts/tasks/main.yml
+++ b/roles/openshift_facts/tasks/main.yml
@@ -33,6 +33,7 @@
       is_containerized: "{{ l_is_containerized | default(None) }}"
       public_hostname: "{{ openshift_public_hostname | default(None) }}"
       public_ip: "{{ openshift_public_ip | default(None) }}"
+      portal_net: "{{ openshift_portal_net | default(openshift_master_portal_net) | default(None) }}"
 
 # had to be done outside of the above because hostname isn't yet set
 - name: Gather hostnames for proxy configuration
