--- a/roles/openshift_builddefaults/tasks/main.yml
+++ b/roles/openshift_builddefaults/tasks/main.yml
@@ -5,7 +5,9 @@
     # TODO: add ability to define builddefaults env vars sort of like this
     # may need to move the config generation to a filter however.
     # openshift_env: "{{ hostvars[inventory_hostname]
-    #                    | oo_merge_dicts(hostvars)
+    #                    | oo_merge_dicts(vars if (ansible_version.full
+    #                                              | version_compare('2.0', 'ge')
+    #                                              | bool) else hostvars)
     #                    | oo_openshift_env }}"
     # openshift_env_structures:
     # - 'openshift.builddefaults.env.*'
