--- a/roles/openshift_cloud_provider/tasks/main.yml
+++ b/roles/openshift_cloud_provider/tasks/main.yml
@@ -3,7 +3,9 @@
   openshift_facts:
     role: cloudprovider
     openshift_env: "{{ hostvars[inventory_hostname]
-                       | oo_merge_dicts(hostvars)
+                       | oo_merge_dicts(vars if (ansible_version.full
+                                                 | version_compare('2.0', 'ge')
+                                                 | bool) else hostvars)
                        | oo_openshift_env }}"
     openshift_env_structures:
     - 'openshift.cloudprovider.aws.*'
