--- a/roles/openshift_hosted_facts/tasks/main.yml
+++ b/roles/openshift_hosted_facts/tasks/main.yml
@@ -3,5 +3,7 @@
   openshift_facts:
     role: hosted
     openshift_env: "{{ hostvars[inventory_hostname]
-                       | oo_merge_dicts(hostvars)
+                       | oo_merge_dicts(vars if (ansible_version.full
+                                                 | version_compare('2.0', 'ge')
+                                                 | bool) else hostvars)
                        | oo_openshift_env }}"
