--- a/roles/openshift_facts/tasks/main.yml
+++ b/roles/openshift_facts/tasks/main.yml
@@ -1,8 +1,8 @@
 ---
-- name: Verify Ansible version is greater than or equal to 1.9.4 and less than 2.0
+- name: Verify Ansible version is greater than or equal to 1.9.4
   fail:
     msg: "Unsupported ansible version: {{ ansible_version }} found"
-  when: ansible_version.full | version_compare('1.9.4', 'lt') or ansible_version.full | version_compare('2.0', 'ge')
+  when: not ansible_version.full | version_compare('1.9.4', 'ge')
 
 - name: Detecting Operating System
   stat:
