--- a/playbooks/common/openshift-node/config.yml
+++ b/playbooks/common/openshift-node/config.yml
@@ -66,7 +66,7 @@
         -C {{ item.config_dir }} .
     args:
       creates: "{{ item.config_dir }}.tgz"
-    with_items: nodes_needing_certs
+    with_items: "{{ nodes_needing_certs | default([]) }}"
 
   - name: Retrieve the node config tarballs from the master
     fetch:
@@ -75,7 +75,7 @@
       flat: yes
       fail_on_missing: yes
       validate_checksum: yes
-    with_items: nodes_needing_certs
+    with_items: "{{ nodes_needing_certs | default([]) }}"
 
 - name: Deploy node certificates
   hosts: oo_nodes_to_config
@@ -179,7 +179,7 @@
         -C {{ etcd_generated_certs_dir }}/{{ item.etcd_cert_subdir }} .
     args:
       creates: "{{ etcd_generated_certs_dir }}/{{ item.etcd_cert_subdir }}.tgz"
-    with_items: etcd_needing_client_certs
+    with_items: "{{ etcd_needing_client_certs | default([]) }}"
     when: etcd_client_flannel_certs_missing is defined and etcd_client_flannel_certs_missing
   - name: Retrieve the etcd cert tarballs
     fetch:
@@ -188,7 +188,7 @@
       flat: yes
       fail_on_missing: yes
       validate_checksum: yes
-    with_items: etcd_needing_client_certs
+    with_items: "{{ etcd_needing_client_certs | default([]) }}"
     when: etcd_client_flannel_certs_missing is defined and etcd_client_flannel_certs_missing
 
 - name: Copy the external etcd flannel certs to the nodes
