--- a/roles/os_firewall/defaults/main.yml
+++ b/roles/os_firewall/defaults/main.yml
@@ -1,3 +1,6 @@
 ---
+some_variable_name: "os_firewall"
 os_firewall_enabled: True
 os_firewall_use_firewalld: True
+os_firewall_allow: []
+os_firewall_deny: []
