--- a/roles/os_firewall/tasks/firewall/firewalld.yml
+++ b/roles/os_firewall/tasks/firewall/firewalld.yml
@@ -24,6 +24,9 @@
   command: systemctl daemon-reload
   when: install_result | changed
 
+- name: Unmask the firewalld service
+  command: systemctl unmask firewalld
+
 - name: Start and enable firewalld service
   service:
     name: firewalld
@@ -52,7 +55,7 @@
     port: "{{ item.port }}"
     permanent: false
     state: enabled
-  with_items: os_firewall_allow
+  with_items: "{{ os_firewall_allow }}"
   when: os_firewall_allow is defined
 
 - name: Persist firewalld allow rules
@@ -60,7 +63,7 @@
     port: "{{ item.port }}"
     permanent: true
     state: enabled
-  with_items: os_firewall_allow
+  with_items: "{{ os_firewall_allow }}"
   when: os_firewall_allow is defined
 
 - name: Remove firewalld allow rules
@@ -68,13 +71,11 @@
     port: "{{ item.port }}"
     permanent: false
     state: disabled
-  with_items: os_firewall_deny
-  when: os_firewall_deny is defined
+  with_items: "{{ os_firewall_deny }}"
 
 - name: Persist removal of firewalld allow rules
   firewalld:
     port: "{{ item.port }}"
     permanent: true
     state: disabled
-  with_items: os_firewall_deny
-  when: os_firewall_deny is defined
+  with_items: "{{ os_firewall_deny }}"
