using variable for https://github.com/openshift/openshift-ansible/issues/1632

--- a/playbooks/adhoc/metrics_setup/playbooks/install.yml
+++ b/playbooks/adhoc/metrics_setup/playbooks/install.yml
@@ -9,7 +9,7 @@
     lineinfile: "state=present dest=/etc/origin/master/master-config.yaml regexp='^\ \ metricsPublicURL' insertbefore='^\ \ publicURL' line='\ \ metricsPublicURL: {{ metrics_public_url }}'"
 
   - name: "Restart master service"
-    service: name=atomic-openshift-master state=restarted
+    service: name={{deployment_type}}-master-api state=restarted
 
   - name: "Copy metrics-deployer yaml to remote"
     copy: "src=../files/metrics-deployer-setup.yaml dest=/tmp/metrics-deployer-setup.yaml force=yes" 
